# py-dep-kun

./: .coverage  .gitignore  @$  Dockerfile  Makefile  README.md  a.c  a.py  app.py  config_up.sh  docker-compose.yaml  docker-compose.yml  errors.h  heap.py  pylintrc  req.py  requirements.txt  run.py  setup.cfg
.circleci/: config.yml
.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  io.meta.json  mmap.meta.json  posix.meta.json  run.data.json  run.meta.json  sys.meta.json  types.meta.json  typing.meta.json  typing_extensions.meta.json
.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json
.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
doc/: sec.uml
include/: hello.cs  hello.m  hello.pas  hello.scala
script/: bun_build.sh  check_lite.sh  export_fs.sh  helbin  rewrite_dockerfile.sh  stage_diff.sh  version.sh
tests/: test_docker.py  test_multi.py  test_run.py
timeout/: README.md  docker-compose.yaml
timeout/backend/: Dockerfile  app.py  gunicorn_conf.py
timeout/load-test/: k6-test.js  k6-timeout-test.js
timeout/nginx/: nginx.conf
uvcorn/: Dockerfile
uvcorn/app/: main.py
