[metadata]
license_file = LICENSE

[pytest-cnf]
proc_list = 4

[bdist_wheel]
plat-name = any
python-tag = py2.7

[pycodestyle]
count = False
ignore = E226,E302,E41,E402
max-line-length = 160
statistics = True

[mypy]
ignore_missing_imports = 1

[black]

[options]
setup_requires = setuptools_scm

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9
