[metadata]
license_file = LICENSE
version = "1.0.0"

[pytest-cnf]
proc_list = 4

[bdist_wheel]
plat-name = any
python-tag = py2.7

[pycodestyle]
count = False
ignore = E226,E302,E41,E402
max-line-length = 160
statistics = True

[mypy]
ignore_missing_imports = 1

[black]

[options]
setup_requires = setuptools_scm

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
line_length=120
force_to_top=file1.py,file2.py
skip=file3.py,file4.py
known_future_library=future,pies
known_standard_library=std,std2
known_third_party=randomthirdparty
known_first_party=mylib1,mylib2
indent='    '
multi_line_output=3
length_sort=1
forced_separate=django.contrib,django.utils
default_section=FIRSTPARTY
no_lines_before=LOCALFOLDER
